--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,11 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/Bmob_Push_V0.8beta_20160420.jar"/>
+	<classpathentry kind="lib" path="libs/BmobSDK_V3.4.6_0415.jar"/>
+	<classpathentry kind="lib" path="libs/okhttp-2.4.0.jar"/>
+	<classpathentry kind="lib" path="libs/okio-1.4.0.jar"/>
+	<classpathentry kind="lib" path="libs/org.apache.http.legacy.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
